--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,4 +8,44 @@
 		<excption-type>java.lang.Exception</excption-type>
 		<location>/day5/exceptionType_error.jsp</location>
 	</error-page>
+	
+	<filter>
+		<filter-name>Filter01</filter-name>
+		<filter-class>filter.AuthenFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>Filter01</filter-name>
+		<url-pattern>/day5/filter01_process.jsp</url-pattern>
+	</filter-mapping>
+	
+	<filter>
+		<filter-name>Filter02</filter-name>
+		<filter-class>filter.InitParamFilter</filter-class>
+		<init-param>
+			<param-name>param1</param-name>
+			<param-value>admin</param-value>
+		</init-param>
+		<init-param>
+			<param-name>param2</param-name>
+			<param-value>1234</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>Filter02</filter-name>
+		<url-pattern>/day5/filter02_process.jsp</url-pattern>
+	</filter-mapping>
+	
+	
+	<filter>
+		<filter-name>Filter02_02</filter-name>
+		<filter-class>filter.LogFileFilter</filter-class>
+		<init-param>
+			<param-name>filename</param-name>
+			<param-value>c:\\logs\\monitor.log</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>Filter02_2</filter-name>
+		<url-pattern>/day5/filter02_process.jsp</url-pattern>
+	</filter-mapping>
 </web-app>
